--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
     "leaflet": "^1.6.0",
     "leaflet-geosearch": "^2.7.0",
+    "material-ui": "^0.20.2",
+    "mui-datatables": "^2.14.0",
+    "namor": "^2.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.6.3",
     "react-leaflet-control": "^2.1.2",
+    "react-leaflet-enhanced-marker": "^1.0.15",
     "react-leaflet-geosearch": "^0.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-table": "^7.0.4",
+    "rsuite": "^4.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-leaflet-markercluster": "^2.0.0"
   }
 }
