--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@reach/combobox": "^0.10.5",
     "@react-google-maps/api": "^1.9.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -30,7 +31,8 @@
     "react-scripts": "3.4.1",
     "react-table": "^7.0.4",
     "rsuite": "^4.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
