--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-table": "^7.0.4",
     "rsuite": "^4.4.1",
     "styled-components": "^5.1.0",
-    "use-places-autocomplete": "^1.3.10"
+    "use-places-autocomplete": "^1.3.10",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
