--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-leaflet-geosearch": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-table": "^7.0.4",
     "rsuite": "^4.4.1",
     "styled-components": "^5.1.0",
