--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet-geosearch": "^2.7.0",
     "material-ui": "^0.20.2",
     "mui-datatables": "^2.14.0",
+    "multiselect-react-dropdown": "^1.6.3",
     "namor": "^2.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
@@ -27,6 +28,7 @@
     "react-leaflet-control": "^2.1.2",
     "react-leaflet-enhanced-marker": "^1.0.15",
     "react-leaflet-geosearch": "^0.3.0",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
