--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "axios": "^0.19.2",
+    "axios": "0.18.0",
+    "base-64": "^1.0.0",
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
@@ -24,6 +25,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^2.6.3",
     "react-leaflet-control": "^2.1.2",
     "react-leaflet-enhanced-marker": "^1.0.15",
