--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "0.18.0",
     "base-64": "^1.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
     "leaflet": "^1.6.0",
