--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "namor": "^2.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^2.6.3",
@@ -40,7 +41,7 @@
     "react-select": "^3.1.0",
     "react-table": "^7.0.4",
     "rsuite": "^4.4.1",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.3.3",
     "use-places-autocomplete": "^1.3.10",
     "yarn": "^1.22.4"
   },
